<resources>
    <string name="app_name">ActivityMonitor</string>
    <string name="welcome">Welcome</string>
    <string name="upcoming">Upcoming</string>
    <string name="today">Today</string>
    <string name="history">History</string>
    <string name="cancel">Cancel</string>
    <string name="new_activity">New Activity</string>
    <string name="add">Add</string>
    <string name="activity_filler">0</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="welcomeLogin">Welcome</string>
    <string name="loginButton">Login</string>
    <string name="register_button">Register</string>
    <string name="member_button">Member</string>
    <string name="log_out">Log out</string>
    <string name="add_activity">Add Activity</string>
    <string name="white">#FFFFFF</string>
    <string name="black">#000000</string>
    <string name="number_of_times">Number of times:</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="repeat_activity">Repeat Activity:</string>
    <string name="add_notification_and_alarm">Add notification and alarm:</string>
</resources>
