<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="12dp"
    android:orientation="vertical"
    android:background="#151515">

    <TextView
        android:id="@+id/displayUsernameMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:padding="10dp"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:id="@+id/todayActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.1"
            android:layout_marginBottom="20dp"
            android:background="@drawable/box_outline_main">

            <TextView
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:background="@drawable/ic_iconfinder_calendar_285670"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/todayActivityLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:text="@string/activity_filler"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/upcomingActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.10"
            android:layout_marginBottom="20dp"
            android:background="@drawable/box_outline_main">

            <TextView
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:background="@drawable/ic_iconfinder_resolutions_04_897245"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/upcomingActivityLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:text="@string/activity_filler"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/historyActivity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="0.1"

            android:background="@drawable/box_outline_main">

            <TextView
                android:layout_width="70dp"
                android:layout_height="72dp"
                android:background="@drawable/ic_iconfinder_recent_history_replay_repeat_5402415"
                android:layout_marginStart="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:textSize="25sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/historyActivityLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:text="@string/activity_filler"
                android:layout_gravity="center"
                android:gravity="end"
                android:layout_marginEnd="30dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"
            android:orientation="vertical"
            android:gravity="center|bottom">

            <Button
                android:id="@+id/addActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_activity"
                android:elevation="5dp"
                android:translationZ="3dp"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:background="@drawable/add_activity"/>
            <Button
                android:id="@+id/mainLogoutButtonId"
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"/>
        </LinearLayout>

    </LinearLayout>








</LinearLayout>