<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="16dp"
    android:orientation="vertical"
    android:background="@drawable/gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/welcomeLogin"
            android:layout_marginBottom="40dp"
            android:textColor="@android:color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">
            <EditText
                android:id="@+id/loginEmailInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="10dp"
                android:drawableLeft="@drawable/ic_envelope"
                android:drawablePadding="8dp"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/text_hints"
                android:hint="@string/emailLogin"
                android:text="jw@gmail.com"
                android:background="#11000000"
                android:textColor="@android:color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/loginPasswordInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"
                android:background="#11000000"
                android:text="qwerty12345"
                android:textColor="@android:color/white"
                android:hint="@string/passwordLogin"
                android:textColorHint="@color/text_hints"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center|bottom"
            android:layout_marginTop="30dp">


            <Button
                android:id="@+id/loginLoginButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginButton"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:layout_marginTop="40dp"
                android:elevation="5dp"
                android:translationZ="3dp"
                android:background="@drawable/login_buttons" />
            <Button
                android:id="@+id/loginRegisterButtonId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Register here"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"/>




        </LinearLayout>




    </LinearLayout>

</LinearLayout>