<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancelAddActivityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="0.25"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_activity"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="2dp"/>

            <Button
                android:id="@+id/addAddActivityButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add"
                android:layout_weight="0.25"
                android:textAlignment="center"
                android:background="@android:color/transparent"
                android:textColor="@android:color/white"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:padding="10dp">

            <EditText
                android:id="@+id/titleAddActivityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

            <EditText
                android:id="@+id/dateAddActivityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Date"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"/>

            <EditText
                android:id="@+id/timeAddActivityEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Time"
                android:paddingLeft="20dp"
                android:paddingRight="20dp" />

        </LinearLayout>

        <Switch
            android:id="@+id/switchNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add notification and alarm:"
            android:background="@android:color/white"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:textSize="16sp"
            android:switchMinWidth="50dp" />
    </LinearLayout>


</LinearLayout>