<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/gradient">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:text="@string/welcomeLogin"
            android:layout_marginBottom="40dp"
            android:textColor="@android:color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/usernameInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="10dp"
                android:singleLine="true"
                android:hint="Username"
                android:textColorHint="@color/text_hints"
                android:textColor="@android:color/white"
                android:inputType="textPersonName"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_android"
                android:drawablePadding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/emailInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="10dp"
                android:singleLine="true"
                android:hint="Email"
                android:textColorHint="@color/text_hints"
                android:textColor="@android:color/white"
                android:inputType="textEmailAddress"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_envelope"
                android:drawablePadding="8dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/passwordInputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:padding="10dp"
                android:singleLine="true"
                android:text=""
                android:hint="Password"
                android:textColorHint="@color/text_hints"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:background="#11000000"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="8dp"/>

        </LinearLayout>

        <Button
            android:layout_marginTop="40dp"
            android:id="@+id/registerButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_button"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:elevation="5dp"
            android:translationZ="3dp"
            android:background="@drawable/login_buttons"/>

        <Button
            android:id="@+id/loginButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/member_button"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"/>


    </LinearLayout>



</LinearLayout>

